fix: [PD-411] suggestion and product font-family alignment

--- a/src/component/GenderButton/GenderButton.style.scss
+++ b/src/component/GenderButton/GenderButton.style.scss
@@ -1,6 +1,6 @@
 .GenderButton {
   &-Link {
-    margin : 0px 8px;
+    margin : 0px 13px;
     &:hover {
       text-shadow: 0 0 0.01px black;
     }
