--- a/src/component/HeaderGenders/HeaderGenders.style.scss
+++ b/src/component/HeaderGenders/HeaderGenders.style.scss
@@ -20,6 +20,11 @@
     }
   }
   .GenderButton {
+    &-Container {
+      &::before{
+        left : -12px;
+      }
+    }
     &-Button {
       height: auto;
       &_isCurrentGender {
