--- a/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -180,7 +180,6 @@
             text-align: left;
             text-decoration: underline;
             font-size: 12px;
-            font-weight: bold;
             position: left;
             font-family: 'Avenir Next Medium';
             letter-spacing: 0px;
@@ -298,7 +297,7 @@ div.SearchOverlay.Overlay {
         opacity: 1;
 
         h2 {
-            font: normal normal bold 14px/19px 'Avenir Next';
+            font: normal normal bold 14px/19px 'Avenir Next Demi Bold';
             color: #000000;
             text-transform: uppercase;
             margin-bottom: 0px;
@@ -327,6 +326,7 @@ div.SearchOverlay.Overlay {
             font-family: 'Avenir Next Demi Bold';
             font-size: 14px;
             color :#000000;
+            line-height: 19px;
             text-transform: uppercase;
         }
 
@@ -340,7 +340,7 @@ div.SearchOverlay.Overlay {
             padding: 0px 10px;
             .SearchProduct {
                 &-ProductName{
-                    font-family: 'Avenir Next Regular';
+                    font-family: 'Avenir Next';
                     font-size:13px;
                     width: 165px;
                     height: 18px;
@@ -356,7 +356,8 @@ div.SearchOverlay.Overlay {
         &-SpecialPriceCon{
             div {
                 font-family: 'Avenir Next Bold';
-                font-size: 12px;
+                font-size: 14px;
+                letter-spacing: -0.5px;
                 color : #000000;
             }
             .Price-Wrapper {
@@ -376,6 +377,7 @@ div.SearchOverlay.Overlay {
         font-family: 'Avenir Next Medium';
         font-size: 16px;
         letter-spacing: 0px;
+        line-height: 22px;
         color: #000000;
         opacity: 1;
         position: absolute;
@@ -422,7 +424,7 @@ div.SearchOverlay.Overlay {
                 flex-direction: row;
                 padding: 0px;
                 justify-content: space-between;
-                font-family: 'Avenir Next Regular';
+                font-family: 'Avenir Next';
                 font-size: 14px;
                 line-height: 16px;
                 color:#000000;
@@ -446,7 +448,7 @@ div.SearchOverlay.Overlay {
         margin-left : 0px;
         
         h2 {
-            font: normal normal bold 14px/19px 'Avenir Next';
+            font: normal normal bold 14px/19px 'Avenir Next Demi Bold';
             color: #000000;
             text-transform: uppercase;
             margin-top: 0px;
@@ -588,7 +590,7 @@ div.SearchOverlay.Overlay {
     }
 
     h2 {
-        font: normal normal bold 14px/19px 'Avenir Next';
+        font: normal normal bold 14px/19px 'Avenir Next Demi Bold';
         color: #000000;
         text-transform: uppercase;
         margin-bottom: 0px;
